--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,6 +95,7 @@ body::after {
     #botones {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+
         button {
             font-size: 2rem;
             padding: 1.5rem;
@@ -114,9 +115,14 @@ body::after {
         }
 
         #btn-cero{
-            grid-column: span 2;
-            width: 14rem;
+            /* grid-column: span 2; */
+            /* width: 14rem; */
+            /* border-bottom-left-radius: 1rem; */
+        }
+
+        #negativo{
             border-bottom-left-radius: 1rem;
+
         }
 
         #igual{
@@ -134,6 +140,19 @@ body::after {
 
         .gris{
             background-color: var(--botones-numeros);
+        }
+
+        #borrar::before{
+            content: '';
+            background-image: url(../img/borrar.png);
+            background-size: cover;
+            width: 20px;
+            height: 20px;
+            display: inline-block;
+            /* position: absolute; */
+            /* left: 10px; */
+            /* top: 50%; */
+            /* transform: translateY(-50%); */
         }
 
         
