1) Se agrega control para error de Infinito 2) Se incrementa la cantidad de caracteres en pantalla principal, incluyendo otro estilo 3) Se solventan otros errores encontrados

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -114,6 +114,11 @@ body::after {
             /* color: yellow; */
         }
 
+        .tam4_texto_pant{
+            font-size: 2rem;
+            /* color: yellow; */
+        }
+
         .po_color{
             color: var(--fondo-principal);
         }
